release/filters Фильтры и классы (#193)
* Main to Dev (#179)

* Релиз 4 (#174)

* feat: сделал минимальный размер строки поиска меньше

* ci: обновил путь

* ci: обновил название сервиса

* ci: обновил название сервиса

* feat: Предпросмотр (#169)

* feat: сделал минимальный размер строки поиска меньше

* hotfix: Исправление ошибки получения источника в глоссарии при редактировании

* feat: Предпросмотр

---------

Co-authored-by: svifty7 <svifty7@gmail.com>

* feat: Добавление в полный поиск глоссария (#170)

* feat: сделал минимальный размер строки поиска меньше

* hotfix: Исправление ошибки получения источника в глоссарии при редактировании

* feat: Добавление в полный поиск глоссария

---------

Co-authored-by: svifty7 <svifty7@gmail.com>

* feat: Добавление в полный поиск глоссария

* feat: Добавление галереи в бестиарий (#171)

* feat: Добавление галереи в бестиарий

* feat: Добавление changelog галереи в бестиарий

* feat: Уязвимости, Сопротивление, Иммунитеты текстом (#172)

* feat: Уязвимости, Сопротивление, Иммунитеты текстом

* feat: Уязвимости, Сопротивление, Иммунитеты текстом

* feat: Уязвимости, Сопротивление, Иммунитеты текстом

* feat: Переименование текстовых столбцов

---------

Co-authored-by: svifty7 <svifty7@gmail.com>

* hotfix: Исправление формулы хитов для существ с отрицательным модификатором Телосложения (#178)

(cherry picked from commit 99706b835c96af205153db453465ed836b96323d)

---------

Co-authored-by: svifty7 <svifty7@gmail.com>

* feat: открытие /actuator/health для проверки, что бэк живой (#181)

* fix: Исправление отображения навыков с текстовым описанием (#182)

* fix: Если мирровозрение не указано явно, то делаем Alignment.WITHOUT

* fix: Если источник не указан, то превью все равно должно работать

* fix: Добавил верхние планы, поправил капитализацию (#185)

* fix: исправил план воды

* Классы классы классы классы (#184)

* Классы классы классы классы

* Классы классы классы классы

* Классы классы классы классы

* Классы класс